--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/pllearns/lyte-travel#readme",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "db-migrate": "^0.10.0-beta.24",
     "db-migrate-pg": "^0.2.5",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "nodemon": "^1.12.1",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "pg-promise": "^7.3.1"
   }
 }
