--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/pllearns/lyte-travel#readme",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "connect-pg-simple": "^4.2.1",
     "cookie-parser": "^1.4.3",
     "db-migrate": "^0.10.0-beta.24",
     "db-migrate-pg": "^0.2.5",
