--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/pllearns/lyte-travel#readme",
   "dependencies": {
-    "db-migrate": "^0.10.0-beta.24",
+    "db-migrate": "^0.11.5",
     "db-migrate-pg": "^0.2.5",
     "express": "^4.16.2",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.19.0",
     "pg": "^7.4.0"
   }
 }
